tests/duarouter/errors/unknown_option/options.duarouter
--no-duration-log --net-file=input_net.net.xml --routes=routes.rou.xml --test_this_funky_but_not_exitsing_option
